welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:88: error: Unmatched closing brace '}' ignored here
}
^FlowerCase:91: error: eof expected but '}' found.
}
^